# MiniKind_K-induction

./: .gitignore  6.毕业论文【5.9】.docx  CMakeLists.txt  README.md  main.cpp
files/学习通提交文件/: 1_20200440717_李奕星_模型验证软件的归纳推理算法的设计与实现_任务书.doc  2_20200440717_李奕星_模型验证软件的归纳推理算法的设计与实现_开题报告.doc  4_20200440717_李奕星_模型验证软件的归纳推理算法的设计与实现_中期检查表.docx  5_20200440717_李奕星_模型验证软件的归纳推理算法的设计与实现_文献综述.docx  6_20200440717_李奕星_模型验证软件的归纳推理算法的设计与实现_论文内容.docx
files/格式模板/: 特别说明-软件工程2024年毕业设计-装订格式及打印规范（2024.5.23）.doc  软件工程2024年毕业设计-时间节点.txt  附件0.软件工程2024年毕业设计-档案袋封面（内含栏目后打√）.doc  附件1.软件工程2024年毕业设计-封面.doc  附件2.软件工程2024年毕业设计-原创申明 授权书.doc  附件4.软件工程2024届毕业设计-任务书.doc  附件5.软件工程2024届毕业设计-开题报告.doc  附件6.软件工程2024年毕业设计-论文正文格式说明.docx  附件7.软件工程2024届毕业设计-中期检查表（不封胶，直接放档案袋）.doc  附件8.软件工程2024届毕业设计-文献综述（不封胶，订书机订好一份，直接放档案袋）.doc  附件9.软件工程2024届毕业设计-英文翻译（不封胶，订书机订好一份，直接放档案袋）.doc
files/终稿检测/: 格式检测标注报告.docx
files/论文电子版本/: 0.封面【黄卡纸黑白】.docx  1.授权页【单独一页】.docx  6.毕业论文【答辩后】1.0.docx  中期检查表【单面一页纸】.doc  成绩考核表.docx
lib/runtime/: CMakeLists.txt
lib/spdlog-1.13.0/: README.md
lib/spdlog-1.13.0/include/spdlog/details/: os-inl.h
lib/spdlog-1.13.0/include/spdlog/sinks/: stdout_sinks-inl.h  wincolor_sink-inl.h  wincolor_sink.h
runtime/: CMakeLists.txt
runtime/src/atn/: ParserATNSimulator.cpp  ProfilingATNSimulator.cpp
runtime/src/tree/: Trees.cpp
src/: SSA.lustre  cmdMessage.txt  input.lustre  main.cpp  output.txt
src/Lustre/: Lustre.g4  Lustre.g4.bak  generated.bat  generated.sh
src/Lustre/.antlr/: Lustre.interp  Lustre.tokens  LustreBaseListener.java  LustreLexer.interp  LustreLexer.java  LustreListener.java  LustreParser.java
src/Lustre/constBlock/: ConstValueVisitor.cpp  ConstValueVisitor.h
src/Lustre/expr/: ApplyExprVisitor.cpp  ApplyExprVisitor.h  ArrayExprVisitor.cpp  ArrayExprVisitor.h  BoolExprVisitor.cpp  BoolExprVisitor.h  EquationExprVisitor.cpp  EquationExprVisitor.h  GetSimpleExprType.cpp  GetSimpleExprType.h  MixExprVisitor.cpp  MixExprVisitor.h
src/Lustre/tool/: LustreVisitorTool.cpp  LustreVisitorTool.h  SpdlogTool.cpp  SpdlogTool.h
src/Lustre/typeBlock/: GetTypesType.cpp  GetTypesType.h
src/Lustre/visitor/: MyLustreVisitor.cpp  MyLustreVisitor.h  SecondSymbolVisitor.cpp  SecondSymbolVisitor.h  SymbolVisitor.cpp  SymbolVisitor.h
src/SymbolTable/Scope/: AutomatonScope.cpp  AutomatonScope.h  GlobalScope.cpp  GlobalScope.h  LocalScope.cpp  LocalScope.h  MethodScope.cpp  MethodScope.h  Scope.cpp  Scope.h  StateScope.cpp  StateScope.h
src/SymbolTable/Symbol/: ConstArray.cpp  ConstArray.h  ConstID.cpp  ConstID.h  ConstStruct.cpp  ConstStruct.h  ConstSymbol.cpp  ConstSymbol.h  EnumSymbol.cpp  EnumSymbol.h  Symbol.cpp  Symbol.h  TransitionSymbol.cpp  TransitionSymbol.h  TypeArray.cpp  TypeArray.h  TypeDefSymbol.cpp  TypeDefSymbol.h  TypeId.cpp  TypeId.h  TypeStruct.cpp  TypeStruct.h  VariableSymbol.cpp  VariableSymbol.h
src/Tool/: CheckTool.cpp  CheckTool.h  ExportOutput.cpp  ExportOutput.h  GetInput.cpp  GetInput.h  StringTool.cpp  StringTool.h  StringVectorTool.cpp  StringVectorTool.h  Z3Tool.cpp  Z3Tool.h
src/Translation/: ExtractLustreInfo.cpp  ExtractLustreInfo.h  LustreNode.cpp  LustreNode.h  VarState.cpp  VarState.h  VarStateList.cpp  VarStateList.h
src/Z3Solver/: CreateSolver.cpp  CreateSolver.h  KInduction.cpp  KInduction.h
test/: code2.lustre  code3.lustre  code4.lustre
论文电子版本/: 2.任务书【黑白双面】.doc  3.开题报告【黑白双面】.doc  中期检查表【单面一页纸】.doc  文献综述【封面单面+内容双面】.docx  档案袋封面.doc  英文翻译【封面单面+内容双面+英文前】.docx
